--- a/style.css
+++ b/style.css
@@ -51,3 +51,112 @@ section header ul li button:hover{
   cursor: pointer;
   box-shadow: 7px 7px 15px;
 }
+ .main{
+  width: 380px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+ .searchBox{
+  position: relative;
+  width: 100%;
+  margin-top: 20px;
+}
+ .search{
+  width: 100%;
+  padding:15px;
+  padding-left: 75px;
+  padding-right: 60px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  outline: none;
+  font-size: 16px;
+}
+ .icons{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  padding: 20px 20px;
+  justify-content: flex-start;
+  align-items: center;
+  pointer-events: none;
+}
+.icons img{
+  color: darkgray;
+  width: 20px;
+  
+}
+
+.buttons{
+  margin-top: 20px;
+}
+ .buttons button{
+  margin: 0 5px;
+  padding: 12px 20px;
+  color: darkblue;
+  font-size: 14px;
+  border: none;
+  cursor:pointer;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  outline: none;
+  background-color: #ccc;
+  box-shadow: 7px 7px 12px darkgray;
+  
+  
+}
+.buttons button a{
+text-decoration: none;
+color:white;
+
+
+}
+ .buttons button:hover{
+  border: 2px solid ;
+  background-color:rgb(250, 2, 2);
+  color: white;
+  transition: 0.3s;
+  font-size: 16px;
+  outline: none;
+  
+
+
+}
+ .languages{
+  display:flex;
+  margin-top: 33px;
+}
+.languages li{
+  list-style: none;
+  padding-left: 25px;
+  text-transform: uppercase;
+  color: darkgoldenrod;
+  cursor: pointer;
+}
+footer{
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(255, 254, 254);
+  padding-top: 68px;
+  
+}
+footer p{
+  font-size: 32px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color:darkblue;
+}
+span{
+  color:red;
+
+}
+span:hover{
+  cursor:grab;
+  background-color: red;
+  color: white;
+  font-size: ;
+}
